--- a/resto/dashboard.html
+++ b/resto/dashboard.html
@@ -315,15 +315,15 @@
                 <div class="testi-content testi-carousel owl-carousel">
                     <div class="testi-item">
                         <i class="testi-icon fa fa-3x fa-quote-left"></i>
-                        <p class="testi-text">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                        <p class="testi-author">John Doe</p>
-                        <p class="testi-desc">CEO of <span>GetTemplates</span></p>
+                        <p class="testi-text">A recomended Webpage , where we get food deliver quickly and freshly.</p>
+                        <p class="testi-author">Tanuj Kumar</p>
+                        <p class="testi-desc">Student <span>Aditya Enginnering College</span></p>
                     </div>
                     <div class="testi-item">
                         <i class="testi-icon fa fa-3x fa-quote-left"></i>
-                        <p class="testi-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci non doloribus ut, alias doloremque perspiciatis.</p>
-                        <p class="testi-author">Mary Jane</p>
-                        <p class="testi-desc">CTO of <span>Unidentity Inc</span></p>
+                        <p class="testi-text">Best Food Ever comes to the mobile with a single click, they were served quick and best.</p>
+                        <p class="testi-author">Sai Chaitanya</p>
+                        <p class="testi-desc">Employee<span>Infosys</span></p>
                     </div>
                 </div>
                 <!-- End of Testimonial -->
