--- a/resto/index.html
+++ b/resto/index.html
@@ -175,19 +175,19 @@
                             <div class="col-4">
                                 <a href="/login" class="thumb-menu">
                                     <img class="img-fluid img-cover" src="img/hero-1.jpg" />
-                                    <h6>Australian Organic Beef</h6>
+                                    <h6>Chicken Dum Biryani</h6>
                                 </a>
                             </div>
                             <div class="col-4">
                                 <a href="/login" class="thumb-menu">
                                     <img class="img-fluid img-cover" src="img/hero-1.jpg" />
-                                    <h6>Australian Organic Beef</h6>
+                                    <h6>Butter Chicken</h6>
                                 </a>
                             </div>
                             <div class="col-4">
                                 <a href="/login" class="thumb-menu">
                                     <img class="img-fluid img-cover" src="img/hero-1.jpg"/>
-                                    <h6>Australian Organic Beef</h6>
+                                    <h6>Panner thikka Masala</h6>
                                 </a>
                             </div>
                         </div>
@@ -214,8 +214,8 @@
                     <h2 class="special-number">01.</h2>
                     <div class="dishes-text">
                         <h3><span>Beef</span><br> Steak Sauce</h3>
-                        <p class="pt-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, ea vero alias perferendis quas animi doloribus voluptates. Atque explicabo ea nesciunt provident libero qui eum, corporis esse quos excepturi soluta?</p>
-                        <h3 class="special-dishes-price">$15.00</h3>
+                        <p class="pt-3">Beef is the culinary name for meat from cattle. In prehistoric times, humans hunted aurochs and later domesticated them. Since that time, numerous breeds of cattle have been bred specifically for the quality or quantity of their meat</p>
+                        <h3 class="special-dishes-price">1500/-</h3>
                         <a href="/login" class="btn-primary mt-3">order now</a>
                     </div>  
                 </div>
@@ -231,8 +231,8 @@
                     <h2 class="special-number">02.</h2>
                     <div class="dishes-text">
                         <h3><span>Salmon</span><br> Zucchini</h3>
-                        <p class="pt-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, accusamus culpa quam amet ipsam odit ea doloremque accusantium quo, itaque possimus eius. In a quis quibusdam omnis atque vero dolores!</p>
-                        <h3 class="special-dishes-price">$12.00</h3>
+                        <p class="pt-3">Salmon is the common name for several species of ray-finned fish in the family Salmonidae. Other fish in the same family include trout, char, grayling, and whitefish. !</p>
+                        <h3 class="special-dishes-price">1200 /-</h3>
                         <a href="/login" class="btn-primary mt-3">order now<span><i class="fa fa-long-arrow-right"></i></span></a>
                     </div>
                 </div>
@@ -258,15 +258,15 @@
                 <div class="testi-content testi-carousel owl-carousel">
                     <div class="testi-item">
                         <i class="testi-icon fa fa-3x fa-quote-left"></i>
-                        <p class="testi-text">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                        <p class="testi-author">John Doe</p>
-                        <p class="testi-desc">CEO of <span>GetTemplates</span></p>
+                        <p class="testi-text">A recomended Webpage , where we get food deliver quickly and freshly.</p>
+                        <p class="testi-author">Tanuj Kumar</p>
+                        <p class="testi-desc">Student <span>Aditya Enginnering College</span></p>
                     </div>
                     <div class="testi-item">
                         <i class="testi-icon fa fa-3x fa-quote-left"></i>
-                        <p class="testi-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci non doloribus ut, alias doloremque perspiciatis.</p>
-                        <p class="testi-author">Mary Jane</p>
-                        <p class="testi-desc">CTO of <span>Unidentity Inc</span></p>
+                        <p class="testi-text">Best Food Ever comes to the mobile with a single click, they were served quick and best.</p>
+                        <p class="testi-author">Sai Chaitanya</p>
+                        <p class="testi-desc">Employee<span>Infosys</span></p>
                     </div>
                 </div>
                 <!-- End of Testimonial -->
